2007-12-07  Akim Demaille  <demaille@gostai.com>

	Update tests.
	* tests-local.mk: update.

2007-12-06  Loic Fosse  <fosse@gostai.com>

	Implement loop keyword.
	* src/parser/ugrammar.y: Define "loop" as an infinite "while" in the
	AST.

2007-12-04  Akim Demaille  <demaille@gostai.com>

	merge -r 1990:1996 https://svn.gostai.com/svn/kernel1/trunk
	2007-12-04  Akim Demaille  <demaille@gostai.com>
	Support #push and #pop for synclines.
	* src/parser/bison/utoken.l: Do it.
	(synclines): New.
	* src/userver.cc (loadFile): Push and pop the sync lines.

	2007-12-04  Akim Demaille  <demaille@gostai.com>
	Fix #line parsing.
	* src/parser/bison/utoken.l: here.

2007-12-04  Akim Demaille  <demaille@gostai.com>

	In addition to the merge, various fixes in the scanner.

	merge -r 1967:1990 https://svn.gostai.com/svn/kernel1/trunk
	2007-12-04  Akim Demaille  <demaille@gostai.com>
	Don't accept #line 3.14.
	* src/parser/bison/utoken.l (NATURAL): New.
	Use it.
	Don't accept #line 3.14e-13.

	2007-12-04  Akim Demaille  <demaille@gostai.com>
	Too big a literal.
	* src/parser/bison/utoken.l (lexical_cast): New.
	Use it.
	(RETURN_TIMEVALUE): Binary now.
	Use RETURN_VAL_TOKEN.

	2007-12-04  Akim Demaille  <demaille@gostai.com>
	Accept #line without file name.
	* src/parser/bison/utoken.l: here.
	* src/uconnection.cc: use it.

	2007-12-04  Akim Demaille  <demaille@gostai.com>
	Issue floats as doubles.
	* src/uvalue.cc (echo): Here.

	2007-12-04  Akim Demaille  <demaille@gostai.com>
	For the precision to 7.
	* src/uvalue.cc (echo): here.

	2007-12-04  Akim Demaille  <demaille@gostai.com>
	Coding style.
	* src/uvalue.cc: Scope reduction.

	2007-12-04  Akim Demaille  <demaille@gostai.com>
	Remove FLAGTEST.
	Unused.  Not even defined in the scanner.
	* src/parser/bison/ugrammar.y: here.

	2007-12-04  Akim Demaille  <demaille@gostai.com>
	Remove FLAGTIME, unused.
	* src/parser/bison/utoken.l (RETURN_FLAGTIME): Remove.
	* src/parser/bison/ugrammar.y: Ditto.