@@ -1,1 +1,0 @@
-Use BOOST_FOREACH in userver.cc
